# dynamo

./: .coderabbit.yaml  .coveragerc  .dockerignore  .gitattributes  .gitignore  .lycheeignore  .pre-commit-config.yaml  AGENTS.md  ATTRIBUTIONS-Go.md  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-Rust.md  ATTRIBUTIONS-container-frontend.md  ATTRIBUTIONS-container-sglang-runtime.md  ATTRIBUTIONS-container-tensorrtllm-runtime.txt  ATTRIBUTIONS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Earthfile  JAILED_STREAM_README.md  README.md  README.zh-CN.md  deny.toml  dynamo.code-workspace  feature-matrix.md  hatch_build.py  package.json  pyproject.toml
deploy/inference-gateway/ext-proc/: Cargo.toml  DEVEL.md  Dockerfile  Makefile  build.rs
launch/dynamo-run/: Cargo.toml  build.rs
launch/dynamo-run/src/: flags.rs  lib.rs  main.rs  opt.rs
lib/async-openai/: Cargo.toml
lib/async-openai/src/: audit_logs.rs  fine_tuning.rs  project_api_keys.rs  steps.rs  traits.rs  users.rs  util.rs
lib/async-openai/tests/: bring-your-own-type.rs  completion.rs  embeddings.rs  ser_de.rs  whisper.rs
lib/backend-common/: CLAUDE.md  Cargo.toml  README.md
lib/backend-common/src/: adapter.rs  args.rs  disagg.rs  engine.rs  error.rs  lib.rs  metrics.rs  publisher.rs  run.rs  snapshot_publisher.rs  telemetry.rs  testing.rs  validate.rs  worker.rs
lib/backend/sglang-sidecar/: Cargo.toml
lib/bench/: CLAUDE.md  Cargo.toml  README.md  agent_trace_to_mooncake.rs  claude_trace_export.rs  multiturn_bench.rs  offline_replay_bench.rs  request_trace_to_mooncake.rs  request_trace_to_satf.rs
lib/bench/coding/: README.md
lib/bench/kv_router/: INDEXER_BENCH.md  active_sequences_bench.rs  active_sequences_open_loop.rs  active_sequences_shared.rs  dc_ckf_consumer_bench.rs  dc_ckf_relay_bench.rs  mooncake_bench.rs  mooncake_open_loop.rs  mooncake_shared.rs
lib/bench/src/: lib.rs
lib/bench/testdata/: mooncake_trace_1000.jsonl
lib/bench/tests/: active_sequences_trace.rs  agent_trace.rs  mooncake_trace.rs  request_trace.rs
lib/bindings/python/: Cargo.toml  README.md  pyproject.toml
lib/data-gen/: CLAUDE.md  Cargo.toml
lib/data-gen/src/: lib.rs  mooncake.rs  satf.rs
lib/discovery/: Cargo.toml  README.md
lib/discovery/src/: lib.rs
lib/engines/mistralrs/: Cargo.toml
lib/kv-router/: BENCH_SETUP.md  CLAUDE.md  Cargo.toml  README.md
lib/kv-router/benches/: active_sequences_bench.rs  kv_indexer_bench.rs  policy_queue.rs  radix_tree_microbench.rs  tracking_hash.rs
lib/kv-router/src/: approx.rs  bench_utils.rs  concurrent_radix_tree.rs  conditional_disagg.rs  flat_hashmap.rs  identity.rs  indexer.rs  lib.rs  lookup_update.rs  nested_map.rs  protocols.rs  radix_tree.rs  test_utils.rs  tracking_hash.rs  zmq_wire.rs
lib/kv-router/tests/: standalone_indexer_http.rs
lib/kvbm-consolidator/: Cargo.toml
lib/kvbm-consolidator/src/: tracker.rs
lib/kvbm-consolidator/tests/: dedup.rs  e2e.rs  kvbm_bridge.rs  lifecycle.rs  output_contract.rs  zmq_ingress.rs
lib/kvbm-kernels/: Cargo.toml  Dockerfile  README.md  build.rs
lib/kvbm-kernels/cuda/: tensor_kernels.cu
lib/kvbm-kernels/src/: lib.rs  tensor_kernels.rs
lib/kvbm-logical/: Cargo.toml  README.md
lib/llm/: Cargo.toml  PREPROCESSOR_CASES.md  build.rs
lib/llm/benches/: README.md  agent_trace_finish_metadata.rs  kv_router_bench.rs  radix_tree_microbench.rs  request_trace_finish_metadata.rs  tokenizer.rs  transfer_context_v2.rs
lib/llm/examples/: mm_token_count.rs
lib/llm/src/: backend.rs  block_manager.rs  common.rs  cuda.rs  direct_zmq_fan_in.rs  disagg_router.rs  discovery.rs  endpoint_type.rs  engines.rs  entrypoint.rs  fpm_publisher.rs  frontend_config.rs  http.rs  hub.rs  kv.rs  kv_dc_relay.rs  kv_router.rs  lib.rs  local_model.rs  lora.rs  migration.rs  mocker.rs  model_card.rs  model_type.rs  namespace.rs  perf.rs  preprocessor.rs  protocols.rs  recorder.rs  request_template.rs  tokenizers.rs  tokens.rs  types.rs  worker_type.rs
lib/llm/tests/: aggregators.rs  anthropic_http_replay.rs  audit_nats_integration.rs  backend.rs  block_manager.rs  deepseek_v32_encoding.rs  deepseek_v4_encoding.rs  http-service-aiperf-responses.rs  http-service.rs  http_metrics.rs  http_namespace_integration.rs  http_websocket.rs  kserve_service.rs  kv_manager.rs  logprob_analysis_integration.rs  model_card.rs  namespace.rs  openai_completions.rs  parallel_tool_call_integration.rs  postprocessor_parsing_stream.rs  preprocessor.rs  request_trace_nats_integration.rs  responses_http_replay.rs  test_chat_template_args.rs  test_common_ext.rs  test_jail.rs  test_parsers_e2e.rs  test_preprocessor.rs  test_reasoning_parser.rs  test_stop_behavior.rs  test_streaming_tool_parsers.rs  test_streaming_usage.rs  test_token_data.rs  tokenizers.rs  tool_choice.rs  tool_choice_finish_reasons.rs
lib/memory/: Cargo.toml  build.rs
lib/memory/.claude/: settings.local.json
lib/memory/src/: actions.rs  arena.rs  device.rs  disk.rs  lib.rs  nixl.rs  offset.rs  pinned.rs  prelude.rs  system.rs  tests.rs  torch.rs
lib/mocker/: Cargo.toml  README.md
lib/mocker/src/: engine.rs  evictor.rs  kv_manager.rs  lib.rs  live.rs  mocker.rs  perf_model.rs  protocols.rs  running_mean.rs  scheduler.rs  sequence.rs
lib/protocols/: CLAUDE.md  Cargo.toml
lib/protocols/src/: assistants.rs  audio.rs  batches.rs  chat.rs  client.rs  completion.rs  config.rs  download.rs  embedding.rs  error.rs  file.rs  image.rs  invites.rs  lib.rs  messages.rs  model.rs  moderation.rs  project_service_accounts.rs  project_users.rs  projects.rs  responses.rs  runs.rs  threads.rs  uploads.rs  vector_store_file_batches.rs  vector_store_files.rs  vector_stores.rs
lib/protocols/tests/: bring-your-own-type.rs  completion.rs  embeddings.rs  ser_de.rs  whisper.rs
lib/renderer/: CLAUDE.md  Cargo.toml  README.md
lib/renderer/src/: lib.rs  template.rs
lib/rl/: Cargo.toml
lib/rl/src/: lib.rs
lib/runtime/examples/: Cargo.toml  async_throughput_demo.rs  (+5 more)
lib/tokenizers/: Cargo.toml  README.md
lib/tokens/: Cargo.toml
lib/truthy/: Cargo.toml
lib/vllm-rs-backend/: Cargo.toml
(+5476 files in other folders)
