# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dynamo-run"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Dynamo Run CLI"

[features]
# Build with `--no-default-features` to disable these defaults
default = ["mistralrs"]
mistralrs = ["dep:dynamo-engine-mistralrs"]

cuda = ["dynamo-engine-mistralrs/cuda"]
metal = ["dynamo-engine-mistralrs/metal"]

tokio-console = ["dynamo-runtime/tokio-console"]

[dependencies]
dynamo-llm = { workspace = true }
dynamo-runtime = { workspace = true }

dynamo-engine-mistralrs = { path = "../../lib/engines/mistralrs", optional = true }

anyhow = { workspace = true }
dynamo-async-openai = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

clap = { version = "4.5", features = ["derive", "env"] }
futures-util = { version = "0.3" }
regex = "1"

[build-dependencies]
vergen-gitcl = "1.0"
anyhow = { workspace = true }
