# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dynamo-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Lightweight HTTP benchmarks for Dynamo endpoints"

[[bench]]
name = "multiturn_bench"
path = "multiturn_bench.rs"
harness = false

[[bin]]
name = "claude_trace_export"
path = "claude_trace_export.rs"

[[bench]]
name = "offline_replay_bench"
path = "offline_replay_bench.rs"
harness = false

[[bench]]
name = "mooncake_bench"
path = "kv_router/mooncake_bench.rs"
harness = false

[[bench]]
name = "active_sequences_bench"
path = "kv_router/active_sequences_bench.rs"
harness = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
futures-util = { workspace = true }
hf-hub = { workspace = true }
indicatif = "0.18"
rand = { workspace = true }
reqwest = { workspace = true }
rustc-hash = "2"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }
tokenizers = { version = "0.21.4", default-features = false, features = [
  "onig",
  "esaxx_fast",
  "rustls-tls",
] }
dynamo-tokens = { workspace = true }
dynamo-mocker = { workspace = true }
bytemuck = "1.22"

[dev-dependencies]
dynamo-kv-router = { workspace = true, features = ["bench", "metrics", "shard-metrics"] }
dynamo-tokens = { workspace = true }
minstant = "0.1.7"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series", "point_series", "full_palette"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
