# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dynamo-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Lightweight HTTP benchmarks for Dynamo endpoints"

[features]
default = []
dc-ckf-bench = []
mocker-kvbm-offload = ["dynamo-mocker/kvbm-offload"]
profile = ["dynamo-mocker/profile"]

[[bench]]
name = "multiturn_bench"
path = "multiturn_bench.rs"
harness = false

[[bin]]
name = "claude_trace_export"
path = "claude_trace_export.rs"

[[bin]]
name = "request_trace_to_satf"
path = "request_trace_to_satf.rs"

[[bench]]
name = "offline_replay_bench"
path = "offline_replay_bench.rs"
harness = false

[[bench]]
name = "mooncake_bench"
path = "kv_router/mooncake_bench.rs"
harness = false

[[bin]]
name = "dc_ckf_consumer_bench"
path = "kv_router/dc_ckf_consumer_bench.rs"
required-features = ["dc-ckf-bench"]

[[bench]]
name = "active_sequences_bench"
path = "kv_router/active_sequences_bench.rs"
harness = false

[[bench]]
name = "dc_ckf_relay_bench"
path = "kv_router/dc_ckf_relay_bench.rs"
harness = false
required-features = ["dc-ckf-bench"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
flate2 = "1"
futures-util = { workspace = true }
hf-hub = { workspace = true }
indicatif = "0.18"
rand = { workspace = true }
reqwest = { workspace = true }
rustc-hash = "2"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }
tokenizers = { version = "0.21.4", default-features = false, features = [
  "onig",
  "esaxx_fast",
  "rustls-tls",
] }
dynamo-tokens = { workspace = true }
dynamo-data-gen = { workspace = true }
dynamo-mocker = { workspace = true }
dynamo-kv-router = { workspace = true, features = ["bench", "metrics", "shard-metrics"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[dev-dependencies]
dynamo-tokens = { workspace = true }
minstant = "0.1.7"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
