# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0


[package]
name = "dynamo-data-gen"
description = "Shared schemas and primitives for Dynamo data generation (e.g. Mooncake replay traces)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
dynamo-kv-hashing = { workspace = true }
rustc-hash = "2"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
