# SPDX-FileCopyrightText: Copyright (c) 2024-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dynamo-kv-router"
description = "KV Router - Radix tree for LLM KV cache routing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = []
metrics = ["dep:prometheus"]
runtime-protocols = ["dep:dynamo-runtime"]
bench = []
profile = []
shard-metrics = []
standalone-indexer = ["dep:axum", "dep:serde_json", "dep:reqwest", "dep:zmq", "dep:chrono", "dep:tracing-appender"]
standalone-slot-tracker = ["dep:axum", "dep:serde_json", "dep:zmq"]
standalone-selection = ["standalone-indexer"]

[dependencies]
# repo
dynamo-runtime = { workspace = true, optional = true }
dynamo-kv-hashing = { workspace = true }
dynamo-tokens = { workspace = true }
dynamo-truthy = { workspace = true }

# workspace
anyhow = { workspace = true }
arc-swap = "1.9.1"
async-trait = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
ordered-float = { workspace = true }
derive_builder = { workspace = true }
fastrand = "2"
prometheus = { workspace = true, optional = true }
seqlock = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
serde_yaml = "0.9.34"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
zmq = { version = "0.10", optional = true }
uuid = { workspace = true }
xxhash-rust = { workspace = true }

# dependencies
crossbeam-queue = "0.3"
flume = "0.12.0"
parking_lot = { workspace = true }
rmp-serde = { workspace = true }

rustc-hash = "2.1.1"
slotmap = "1"

# standalone-indexer (optional)
axum = { version = "=0.8.4", default-features = false, features = [
  "http1",
  "json",
  "matched-path",
  "query",
  "tokio",
  "tracing",
], optional = true }
chrono = { workspace = true, optional = true }
reqwest = { version = "0.12.24", default-features = false, features = ["json"], optional = true }
tracing-appender = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.5"
rstest = "0.18.2"
rstest_reuse = "0.7.0"
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time", "test-util"] }
dynamo-tokens = { workspace = true }
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "policy_queue"
harness = false
